--- a/demo-docker/Dockerfile
+++ b/demo-docker/Dockerfile
@@ -17,4 +17,4 @@ ARG JAR_FILE=target/demo-docker-0.0.1-SNAPSHOT.jar
 ADD ${JAR_FILE} demo-docker-0.0.1-SNAPSHOT.jar
 
 # Run the jar file
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/demo-docker-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/demo-docker-0.0.1-SNAPSHOT.jar"]
